added signupNotificationEmail for multiple email notifications on signup, updated config.yml.example

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -1,10 +1,18 @@
 development: &defaults
-  fusion_table_id: 
+  fusion_table_id: 1xy_wp4-NhtKPecuDlhsS8MLO0z-g5ayY1OfBhAg
   google_account: 
   google_password: 
+  google_api_key: 
   
   flickr_key: 
   flickr_secret: 
+
+  signupNotificationEmail: 
+
+  admin1Email: 
+  admin1Pass: 
+  admin2Email: 
+  admin2Pass: 
 
 development:
   <<: *defaults
