fixed flickr issue

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
   encoding: unicode
   database: TechLocator_development
   pool: 5
-  username: derekeder 
+  username: Keith
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -43,7 +43,7 @@ test:
   encoding: unicode
   database: TechLocator_test
   pool: 5
-  username: 
+  username:
   password:
 
 production:
